---
source: compiler-core/src/erlang/tests/type_params.rs
assertion_line: 46
expression: "\n        pub record Wibble<a> {\n            Oops\n        }\n\n        pub fn wibble() -> Result<a, Wibble<a>> {\n            todo\n        }\n        "
---
----- SOURCE CODE

        pub record Wibble<a> {
            Oops
        }

        pub fn wibble() -> Result<a, Wibble<a>> {
            todo
        }
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([wibble/0]).
-export_type([wibble/1]).

-type wibble(I) :: oops | {rakun_phantom, I}.

-file("/root/project/test/my/mod.rakun", 6).
-spec wibble() -> {ok, any()} | {error, wibble(any())}.
wibble() ->
    erlang:error(#{rakun_error => todo,
            message => <<"`todo` expression evaluated. This code has not yet been implemented."/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"wibble"/utf8>>,
            line => 7}).
